--- a/main.css
+++ b/main.css
@@ -321,6 +321,87 @@ footer ul , .copy{
 
 
 /*--------- Responsive --------*/
+@media only screen and (max-width: 1200px){
+   
+    header{
+        height: 100vh;
+        min-height: 1000px;
+    }
+    header h1 {
+        margin: 50 0 40 0;
+
+    }
+    .btnWhite{
+        margin-bottom: 80px;
+
+    }
+    .callToAction{
+        width: 90%;
+    }
+    .ipad{
+        display: none;
+    }
+    .iphone{
+        display: block;
+
+    }
+}
+@media only screen (max-width: 900px){
+     
+    header h1{
+        width: 100%;
+
+    }
+    header{
+        background-position: left center;
+    }
+    .iphone{
+        display: none;
+
+    }
+    footer{
+        float: none;
+        display: block;
+        text-align: center;
+    }
+    .copy{
+        text-align: center;
+        display: block;
+
+    }
+    footer ul li{
+        margin: 0 25px;
+
+    }
+}
+@media only screen (max-width: 700px){
+    body{
+        background-color: red;
+    }
+
+    .new4kMovies ul{
+        flex-direction: column;
+    }
+    .desktop{
+        display: none;
+
+    }
+    .mobile{
+        display: block;
+
+    }
+    nav ul li{
+        margin: 0;
+    }
+    footer ul li{
+        display: none;
+
+    }
+    h1 {
+        font-size: 36px;
+        
+    }
+}
 
 
 
